[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://font/phantivia_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://font/zpix.tres" type="DynamicFont" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="node_root" type="Node2D" parent="."]
position = Vector2( 921.055, 61.5343 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_right = 500.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 4 )
text = "dwdwd"
highlight_current_line = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit3" type="TextEdit" parent="."]
margin_left = 2.52271
margin_top = 632.62
margin_right = 802.523
margin_bottom = 982.62
custom_fonts/font = ExtResource( 4 )
text = "Output"
highlight_current_line = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 395.615
margin_top = 558.145
margin_right = 495.615
margin_bottom = 598.145
custom_fonts/font = ExtResource( 2 )
text = "EXCUTE"

[node name="Label" type="Label" parent="."]
margin_left = 5.04547
margin_top = 601.507
margin_right = 137.045
margin_bottom = 634.507
custom_fonts/font = ExtResource( 2 )
text = "OUTPUT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
